--- a/app/views/iphones/_color_option.html.erb
+++ b/app/views/iphones/_color_option.html.erb
@@ -1,9 +1,9 @@
-<% local_assigns => {value:, color:, iphone:} %>
+<% local_assigns => {value:, color:, iphone:, catalog:} %>
 
 <%= label_tag [:color, value].join('_'),
               data: {
                 action: "mouseenter->image-switcher#setColorText mouseleave->image-switcher#resetColorText",
-                image_switcher_color_name_param: iphone.color_name_for_value(value)
+                image_switcher_color_name_param: catalog.color_name_for_value(value)
               },
               class: "#{color} inline-block w-8 h-8 border-2 rounded-full cursor-pointer outline-2 outline outline-offset-0.5 outline-transparent has-[:checked]:outline-blue-500" do %>
   <%= radio_button_tag :color, value, iphone.color == value,
