--- a/app/views/iphones/_iphone.html.erb
+++ b/app/views/iphones/_iphone.html.erb
@@ -1,8 +1,10 @@
+<% local_assigns => {catalog:, iphone:} %>
+
 <div id="iphone">
   <div class="text-xl z-10 font-bold sticky top-0 right-0 h-8 w-full">
     <div class="animate-bounce ml-auto p-2 bg-white text-center w-[400px]">
-      <%= "From #{number_to_currency @iphone.pricing.lump, locale: :en}" %>
-      <%= "or #{number_to_currency @iphone.pricing.monthly, locale: :en}" %>
+      <%= "From #{number_to_currency iphone.pricing.lump, locale: :en}" %>
+      <%= "or #{number_to_currency iphone.pricing.monthly, locale: :en}" %>
       for 24 mo.*
     </div>
   </div>
@@ -18,7 +20,7 @@
 
   <%= tag.div class: "flex" do %>
     <div class="shrink-0 sticky top-0 w-[592px] h-[460px]">
-      <%= image_tag @iphone.image_path,
+      <%= image_tag iphone.image_path,
                     class: "object-cover w-[592px] h-[460px] rounded-[20px]" %>
     </div>
     <div class="pl-10">
@@ -26,16 +28,16 @@
         <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">どれにするか？</span></h2>
         <div>
           <%= form_with url: iphone_path, method: :post do %>
-            <%= fieldset_tag nil, disabled: !@iphone.model_enterable?, class: "disabled:opacity-30" do %>
+            <%= fieldset_tag nil, disabled: !iphone.model_enterable?, class: "disabled:opacity-30" do %>
               <% [{ model: "6-1inch", title: "オラのスマホ Pro", subtitle: "6.1-inch display" },
                   { model: "6-7inch", title: "オラのスマホ Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
                 <%= render 'option',
                            name: :model,
                            value: attributes[:model],
-                           selected: @iphone.model == attributes[:model],
+                           selected: iphone.model == attributes[:model],
                            title: attributes[:title],
                            subtitle: attributes[:subtitle],
-                           pricing_lines: item_pricing(attributes[:model], @iphone.ram)
+                           pricing_lines: item_pricing(attributes[:model], iphone.ram, catalog)
                 %>
               <% end %>
             <% end %>
@@ -56,19 +58,20 @@
 
       <div class="mt-48">
         <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">好きなの選んで</span></h2>
-        <%= tag.div data: { controller: "image-switcher", image_switcher_iphone_value: @iphone } do %>
-          <div class="text-xl my-4" data-image-switcher-target="colorText"><%= @iphone.color_name %></div>
+        <%= tag.div data: { controller: "image-switcher", image_switcher_iphone_value: iphone } do %>
+          <div class="text-xl my-4" data-image-switcher-target="colorText"><%= iphone.color_name %></div>
 
           <%= form_with url: iphone_path, method: :post do %>
-            <%= fieldset_tag nil, disabled: !@iphone.color_enterable?, class: "disabled:opacity-30" do %>
+            <%= fieldset_tag nil, disabled: !iphone.color_enterable?, class: "disabled:opacity-30" do %>
               <% [{ color: "naturaltitanium", class: "bg-gray-400" },
                   { color: "bluetitanium", class: "bg-indigo-800" },
                   { color: "whitetitanium", class: "bg-white" },
                   { color: "blacktitanium", class: "bg-black" }].each do |attributes| %>
                 <%= render 'color_option',
+                           catalog: catalog,
                            value: attributes[:color],
                            color: attributes[:class],
-                           iphone: @iphone %>
+                           iphone: iphone %>
               <% end %>
             <% end %>
           <% end %>
@@ -79,7 +82,7 @@
         <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">容量はいくらにする？</span></h2>
         <div>
           <%= form_with url: iphone_path, method: :post do %>
-            <%= fieldset_tag nil, disabled: !@iphone.ram_enterable?, class: "disabled:opacity-30" do %>
+            <%= fieldset_tag nil, disabled: !iphone.ram_enterable?, class: "disabled:opacity-30" do %>
               <% [{ value: "256GB", title: "256GB<sup>2</sup>".html_safe },
                   { value: "512GB", title: "512GB<sup>*</sup>".html_safe },
                   { value: "1TB", title: "1TB<sup>2</sup>".html_safe },
@@ -87,9 +90,9 @@
                 <%= render 'option',
                            name: :ram,
                            value: attributes[:value],
-                           selected: @iphone.ram == attributes[:value],
+                           selected: iphone.ram == attributes[:value],
                            title: attributes[:title],
-                           pricing_lines: item_pricing(@iphone.model, attributes[:value]) %>
+                           pricing_lines: item_pricing(iphone.model, attributes[:value], catalog) %>
               <% end %>
             <% end %>
           <% end %>
