--- a/app/views/iphones/create.turbo_stream.erb
+++ b/app/views/iphones/create.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.replace "iphone", method: "morph" do %>
-  <%= render "iphone", iphone: @iphone %>
+  <%= render "iphone", iphone: @iphone, catalog: @catalog %>
 <% end %>
