fixing react/customers

--- a/app/views/layouts/react_layout.html.erb
+++ b/app/views/layouts/react_layout.html.erb
@@ -20,5 +20,6 @@
 </div>
 <%= yield %>
 <div id="overlay" class="w-dvh h-dvh inset-0 absolute bg-white visible transition-all duration-500"></div>
+<%= render 'global_notification' %>
 </body>
 </html>
