--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -9,6 +9,8 @@
     </div>
   <% end %>
 
+  <%= hidden_field_tag :redirect_to, params[:redirect_to] %>
+
   <div>
     <%= form.label :name, class: "block text-sm/6 font-semibold text-gray-900" %>
     <div class="mt-2.5">
