--- a/app/content/application/_page_children.html.erb
+++ b/app/content/application/_page_children.html.erb
@@ -6,7 +6,7 @@
     <li class="m-0 my-1 ml-8 !mt-0 list-decimal list-outside list-image-none italic font-thin text-3xl text-gray-400 hover:text-orange-400">
       <%= link_to child_page.data.title,
                   child_page.url,
-                  class: "#{child_page.data.published ? '' : "opacity-40"} text-base font-light not-italic text-orange-500 hover:text-orange-300" %>
+                  class: "#{child_page.data.published ? '' : "opacity-40"} text-base font-light not-italic #{current_page?(child_page.url) ? "text-gray-600" : "text-orange-500"} hover:text-orange-300" %>
       <% if Rails.env.development? %>
         <span class="text-xs"><%= child_page.data.order %></span>
       <% end %>
