--- a/app/content/application/_page_children.html.erb
+++ b/app/content/application/_page_children.html.erb
@@ -1,7 +1,9 @@
+<% show_published_only = local_assigns.fetch(:show_published_only, false) %>
+
 <ol class="ml-5 my-2 text-base/7">
   <% page.children
          .sort_by { _1.data.order.to_i }
-         .filter { page_showable?(_1) }
+         .filter { page_showable?(_1, show_published_only:) }
          .each do |child_page| %>
     <li class="m-0 my-1 ml-8 !mt-0 list-decimal list-outside list-image-none italic font-thin text-3xl text-gray-400 hover:text-orange-400">
       <%= link_to child_page.data.title,
