--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -40,7 +40,7 @@ published: true
               <span class="text-xs"><%= section_page.data.order %></span>
             <% end %>
           </h3>
-          <%= render 'page_children', page: section_page %>
+          <%= render 'page_children', page: section_page, show_published_only: true %>
         </div>
       <% end %>
     </div>
