--- a/app/views/components/sidebar.html.erb
+++ b/app/views/components/sidebar.html.erb
@@ -1,7 +1,7 @@
-<% set_breadcrumbs [["Sidebar Menu Dashboard", component_path(:select)]] %>
+<% set_breadcrumbs [["Sidebar Menu Dashboard", component_path(:sidebar)]] %>
 
 <%= render 'template',
-           title: "Sidebar Menu 1",
+           title: "Sidebar Dashboard",
            description: "" do %>
 
 
