--- a/app/views/components/sidebar_other_page.html.erb
+++ b/app/views/components/sidebar_other_page.html.erb
@@ -1,7 +1,7 @@
-<% set_breadcrumbs [["Sidebar Menu Engineering", component_path(:select)]] %>
+<% set_breadcrumbs [["Sidebar Menu Engineering", component_path(:sidebar_other_page)]] %>
 
 <%= render 'template',
-           title: "Sidebar Menu 2",
+           title: "Sidebar Engineering",
            description: "" do %>
 
   <div class="flex border rounded p-2">
