--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,4 +1,15 @@
 <footer aria-labelledby="footer-heading">
+  <div class="flex justify-center">
+
+    <div class="my-8 p-4 border-2 border-orange-600 rounded-md text-gray-600 text-center bg-white/90">
+      <div class="text-xs">姉妹サイトの</div>
+      <%= link_to "「フロントエンドエンジニアのためのHotwire入門」", "https://hotwire-n-next.castle104.com",
+                  target: "_blank",
+                  class: "block text-orange-600 hover:opacity-50 active:text-orange-800" %>
+      <div class="text-xs">もぜひご覧ください！</div>
+      <div class="text-xs">HotwireとNext.jsの比較もしています</div>
+    </div>
+  </div>
   <div class="mx-auto max-w-7xl px-6 pb-8 pt-4lg:px-8">
     <div class="border-t border-gray-900/10 pt-8 md:flex md:items-end md:justify-between">
       <div class="md:order-2">
