--- a/app/views/application/_breadcrumbs.html.erb
+++ b/app/views/application/_breadcrumbs.html.erb
@@ -18,9 +18,7 @@
           <svg class="h-5 w-5 flex-shrink-0 text-gray-300" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
             <path d="M5.555 17.776l8-16 .894.448-8 16-.894-.448z"/>
           </svg>
-          <%= link_to_unless_current name, url, class: "ml-1 text-sm font-medium text-gray-400 hover:text-orange-400" do %>
-            <span class="ml-1 text-sm font-medium text-gray-400"><%= name %></span>
-          <% end %>
+          <%= link_to name, url, class: "ml-1 text-sm font-medium text-gray-400 hover:text-orange-400" %>
         </div>
       </li>
     <% end %>
