--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -1,7 +1,7 @@
 ---
 title: Anecdotes on Hotwire
 layout: body
-hide_top_button: true
+hide_back_button: true
 hide_title: true
 published: true
 ---
