--- a/app/views/components/_template.html.erb
+++ b/app/views/components/_template.html.erb
@@ -1,6 +1,6 @@
 <%# locals:(title:, description:) %>
 
-<% content_for(:title, "#{title} | Tailwind, ERB & Stimulus") %>
+<% content_for(:title, title) %>
 
 <div class="mx-auto px-4 my-6 sm:px-6 lg:px-8">
   <div class="px-4 py-5 sm:px-6">
