--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title><%= content_for(:title) || "Tailwind Rails" %></title>
+  <title><%= content_for(:title) || "Hotwire Anecdota" %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= display_meta_tags(default_meta_tags(url: request.original_url, title: content_for(:title))) %>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
