Working with Headless UI

--- a/app/views/react/_react_base.html.erb
+++ b/app/views/react/_react_base.html.erb
@@ -1,9 +1,5 @@
-<%
-  local_assigns => {title:}
-%>
+<% local_assigns => {title:} %>
 
 <% provide :head, javascript_include_tag("application_react", "data-turbo-track": "reload", type: "module") %>
 <% set_breadcrumbs [[title, react_path(@template)]] %>
 <% content_for :title, title %>
-
-<div id="root" data-page="<%= @template %>"></div>
