--- a/app/views/react/toggle.html.erb
+++ b/app/views/react/toggle.html.erb
@@ -1,1 +1,5 @@
 <%= render "react_base", title: "Simple Toggle" %>
+
+<div class="m-8 p-4 border-2 border-dotted border-gray-400 rounded-lg">
+  <%= react_component 'Toggle', {foo: :bar} %>
+</div>
