--- a/app/views/react/customers.html.erb
+++ b/app/views/react/customers.html.erb
@@ -1,1 +1,5 @@
 <%= render "react_base", title: "Customers" %>
+
+<div class="m-8 p-4 border-2 border-dotted border-gray-400 rounded-lg">
+  <%= react_component 'Customers' %>
+</div>
