--- a/app/views/react/images.html.erb
+++ b/app/views/react/images.html.erb
@@ -1,1 +1,6 @@
 <%= render "react_base", title: "Images" %>
+
+<div class="m-8 p-4 border-2 border-dotted border-gray-400 rounded-lg">
+  <%= react_component 'Images' %>
+</div>
+
